bugfix - slideshow and drag z-index conflict

--- a/assets/styles/project.css
+++ b/assets/styles/project.css
@@ -183,7 +183,6 @@ h1{
 }
 
 .foreground{
-  z-index: 10;
   display:initial;
 }
 .foreground  img,
